--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
   <title>React App</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
